@@ -27,7 +27,7 @@ Index: xterm/termcap
 +++ xterm/termcap
 @@ -71,6 +71,14 @@
  	:so=\E[7m:sr=\EM:st=\EH:te=\E[?1049l:ti=\E[?1049h:\
- 	:ue=\E[24m:up=\E[A:us=\E[4m:ve=\E[?25h:vi=\E[?25l:
+ 	:ue=\E[24m:up=\E[A:us=\E[4m:ve=\E[?12l\E[?25h:vi=\E[?25l:vs=\E[?12;25h:
  
 +# xterm-debian is identical to xterm-new except that it more strictly
 +# conforms to DEC VT220 behavior in the case of the backspace key; this is
@@ -78,7 +78,7 @@ Index: xterm/XTerm.ad
 ===================================================================
 --- xterm.orig/XTerm.ad
 +++ xterm/XTerm.ad
-@@ -122,6 +122,10 @@
+@@ -153,6 +153,10 @@
  *tek4014*font3: 6x13
  *tek4014*fontSmall: 6x10
  
@@ -93,7 +93,7 @@ Index: xterm/XTerm-col.ad
 ===================================================================
 --- xterm.orig/XTerm-col.ad
 +++ xterm/XTerm-col.ad
-@@ -6,9 +6,9 @@
+@@ -37,9 +37,9 @@
  *VT100*boldColors: on
  *VT100*dynamicColors: on
  
@@ -106,7 +106,7 @@ Index: xterm/XTerm-col.ad
  
  ! - OR -
  ! Uncomment this for black text on a "white" background.
-@@ -113,20 +113,32 @@
+@@ -144,20 +144,32 @@
  *Form.background: AntiqueWhite
  *form.background: AntiqueWhite
  
